--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,15 +22,17 @@
 
         <title>Api Clients Minutrade</title>
 
-        <link rel="stylesheet" href="css/index.min.css" />
-        <link rel="stylesheet" href="css/bootstrap.min.css" />
-
         <!-- build:css({.tmp,frontend}) css/vendor.css -->
         <!-- bower:css -->
         <link rel="stylesheet" href="bower_components/fontawesome/css/font-awesome.css" />
         <link rel="stylesheet" href="bower_components/allmighty-autocomplete/style/autocomplete.css" />
         <link rel="stylesheet" href="bower_components/angular-toastr/dist/angular-toastr.css" />
         <!-- endbower -->
+        <!-- endbuild -->
+
+        <!-- build:css({.tmp,app}) css/index.css -->
+        <link rel="stylesheet" href="css/index.css" />
+        <link rel="stylesheet" href="css/bootstrap.css" />
         <!-- endbuild -->
 
         <!--[if lte IE 9]>
